# invoice_parser

./: PRD.md  database.py  improvement_doc.md  main.py  models.py  pyproject.toml  requirements.txt
app/: main.py
app/api/: dependencies.py
app/api/routes/: auth.py  dashboard.py  files.py  health.py  invoices.py  user.py
app/core/: config.py  database.py  monitoring.py  security.py  validation.py
app/models/: api_responses.py  database.py  schemas.py
app/services/: auth_service.py  database_service.py  file_service.py  invoice_service.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/public/: manifest.json  sw.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/dashboard/: DashboardHeader.jsx  InvoiceDetailModal.jsx  InvoicePreviewModal.jsx  InvoiceTable.jsx  StatsCards.jsx
frontend/src/components/forms/: LoginModal.jsx
frontend/src/components/layout/: AppLayout.jsx  Navbar.jsx  ProtectedRoute.jsx
frontend/src/components/processing/: ResultsPanel.jsx  UploadPanel.jsx
frontend/src/components/ui/: Button.jsx  ErrorBoundary.jsx  Input.jsx  LazyImage.jsx  LoadingSpinner.jsx  Modal.jsx  Notifications.jsx  Toast.jsx
frontend/src/pages/: Dashboard.jsx  Landing.jsx  Process.jsx  Register.jsx
static/: index.html  index_backup.html
